# sz-aiapi-runner

./: .env.example  .gitignore  QUICKSTART.md  README.md  SAMPLES.md  SETUP_COMPLETE.md  SPECIFICATION.md  WORK.md  mise.toml  package-lock.json  package.json  pyproject.toml  work log.md  work_log_001.md
.local/: hscode.jl  hscode_input_1.jl  wv.csv  wv.jl
artifacts/: weight_correction_config.json  weight_correction_simple.json
bigquery/: dataset.md  dataset.sql  experiment_samples.sql
colab/: 01_data_exploration.ipynb  02_experiment_sampling.ipynb  03_estimation_consistency.ipynb  04_full_dataset_extraction.ipynb  05_error_analysis.ipynb  06_category_error_analysis.ipynb  categories_empty.txt  categories_malformed.txt  categories_meaningful.txt  check_data.py  check_missing.py  weight_volume_experiment.ipynb
dataset/: sample200.jsonl  sample200.tsv
inputs/: INPUT.md  README.md  dataset_duplicated.tsv  datasource_complete_sampling.tsv  datasource_outlier.tsv  missing_estimations.tsv  progress.json
prompts/: CHANGELOG.md  volume-weight.v002.system.txt  volume-weight.v006.system.txt  volume-weight.v008.system.txt  volume-weight.v009.system.txt  volume-weight.v010.system.txt  volume-weight.v011.system.txt  volume-weight.v012.system.txt  volume-weight.v013.system.txt  volume-weight.v014.system.txt  weight-volume.v0.system.txt  weight-volume.v3.system.txt  weight-volume.v4.system.txt  weight-volume.v5.system.txt  weight-volume.v7.system.txt
reports/: error_analysis_summary.md
samples/: sample200.jsonl  weight_volume_samples.jsonl
scripts/: combine_results.py  (+31 more)
(+472 files in other folders)
