[project]
name = "sz-aiapi-runner"
version = "0.1.0"
description = "OpenAI HSCode/Weight/Volume Estimation Scripts"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "awscli>=1.44.26",
    "boto3>=1.42.36",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "rich>=14.3.2",
]

[dependency-groups]
dev = []
